--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,8 @@
 @import 'Helpers/_mixin.scss';
 @import 'Components/_header.scss';
 @import 'Components/_footer.scss';
+@import 'Helpers/_assets.scss';
+@import 'Components/_modal.scss';
 @import 'Components/_buttons.scss';
 @import 'Components/_pagination.scss';
 @import 'Layout/_home.scss';
@@ -16,4 +18,7 @@
 @import 'Layout/_contact.scss';
 @import 'Layout/_blogs.scss';
 @import 'Layout/_recruitment.scss';
-@import 'Helpers/_assets.scss';
+@import 'Layout/_search.scss';
+@import 'Layout/_showroom.scss';
+@import 'Layout/_accessary.scss';
+@import 'Layout/_product-details.scss';
