--- a/scss/Layout/_home.scss
+++ b/scss/Layout/_home.scss
@@ -5,6 +5,10 @@
     overflow: hidden;
     display: block;
 }
+.main.change,.main-footer.change{
+    margin-left: 200px;
+    transition: all 0.5s ease-in;
+}
 @import 'Components/_slideshow.scss';
 @import 'Pages/home/_menu-category.scss';
 @import 'Pages/home/_blogs.scss';
