--- a/scss/Pages/products/_menu-product.scss
+++ b/scss/Pages/products/_menu-product.scss
@@ -2,6 +2,7 @@
     @include flex(center,null);
     width: 100%;
     border-bottom: 1px solid $color-border;
+    transition:all 0.5s ease-out;
     .nav-menu-product{
         li{
             padding: 1rem 0.85rem;
