--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@
 @import 'Components/_header.scss';
 @import 'Components/_footer.scss';
 @import 'Helpers/_assets.scss';
+@import 'Components/animation.scss';
 @import 'Components/_modal.scss';
 @import 'Components/_buttons.scss';
 @import 'Components/_pagination.scss';
